[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viz-agent-ai"
version = "0.1.0"
description = "Natural language to Plotly chart — describe what you want, get a chart back."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "plotly", "visualization", "anthropic", "claude"]
authors = [
    { name = "viz-agent contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "plotly>=5.20",
    "tabulate>=0.9",       # used by pandas.to_markdown() in sample_data tool
    "kaleido>=0.2; extra == 'static'",  # optional — only needed for PNG/SVG/PDF export
]

[project.optional-dependencies]
static = ["kaleido>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
viz-agent = "viz_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/viz-agent-ai"
Repository = "https://github.com/example/viz-agent-ai"
Issues = "https://github.com/example/viz-agent-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["viz_agent"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
